--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.Material3.Dark"
         tools:targetApi="31">
         <activity
+            android:name=".MakeRide"
+            android:exported="false" />
+        <activity
+            android:name=".activity_make_ride"
+            android:exported="false" />
+        <activity
             android:name=".HomePage"
             android:exported="false"
             android:label="@string/title_activity_home_page"
