--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:theme="@style/Theme.Material3.Dark"
         tools:targetApi="31">
         <activity
+            android:name=".UserDrivesList"
+            android:exported="false" />
+        <activity
+            android:name=".AllDrivesList"
+            android:exported="false" />
+        <activity
+            android:name=".UserRidesList"
+            android:exported="false" />
+        <activity
+            android:name=".AllRidesList"
+            android:exported="false" />
+        <activity
             android:name=".MakeDrive"
             android:exported="false" />
         <activity
