--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".EditDrivesList"
+            android:exported="false" />
+        <activity
+            android:name=".EditDrive"
+            android:exported="false" />
+        <activity
             android:name=".EditRide"
             android:exported="false" />
         <activity
