--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".AcceptedRidesList"
+            android:exported="false" />
+        <activity
             android:name=".EditDrivesList"
             android:exported="false" />
         <activity
@@ -34,13 +37,7 @@
             android:name=".ProfileMenu"
             android:exported="false" />
         <activity
-            android:name=".UserDrivesList"
-            android:exported="false" />
-        <activity
             android:name=".AllDrivesList"
-            android:exported="false" />
-        <activity
-            android:name=".UserRidesList"
             android:exported="false" />
         <activity
             android:name=".AllRidesList"
