--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,6 @@
             android:name=".EditRide"
             android:exported="false" />
         <activity
-            android:name=".EditRides"
-            android:exported="false" />
-        <activity
             android:name=".EditRidesList"
             android:exported="false" />
         <activity
@@ -52,21 +49,16 @@
             android:name=".MakeRide"
             android:exported="false" />
         <activity
-            android:name=".activity_make_ride"
-            android:exported="false" />
-        <activity
             android:name=".HomePage"
             android:exported="false"
             android:label="@string/title_activity_home_page"
             android:theme="@style/Theme.RideshareApp" />
         <activity
             android:name=".SignUp"
-            android:exported="false"
-            android:theme="@style/Theme.Material3.Dark.NoActionBar" />
+            android:exported="false" />
         <activity
             android:name=".Login"
-            android:exported="true"
-            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
