--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,39 +17,49 @@
         tools:targetApi="31">
         <activity
             android:name=".AcceptedRidesList"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".EditDrivesList"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".EditDrive"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".EditDrivesList"/>
         <activity
             android:name=".EditRide"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".EditRidesList"/>
         <activity
             android:name=".EditRidesList"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".ProfileMenu"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".AllDrivesList"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".AllRidesList"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".MakeDrive"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".MakeRide"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".HomePage"
             android:exported="false"
             android:label="@string/title_activity_home_page"
-            android:theme="@style/Theme.RideshareApp" />
+            android:parentActivityName=".HomePage"/>
         <activity
             android:name=".SignUp"
             android:exported="false" />
@@ -64,7 +74,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="false" />
     </application>
 
 </manifest>
